--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ilp-plugin": "^3.1.0",
+    "ilp-protocol-spsp": "^2.0.0",
+    "ilp-protocol-stream": "^0.1.2"
+  }
 }
